@@ -16,6 +16,8 @@ dgm-lib v3.0.0
     * `dgm::ParticleSystemInterface` is now explicit
  * Previously deprecated default constructors were removed (`dgm::Clip`, `dgm::TileMap`, `dgm::Path`)
  * Fixed an off-by-one error produced from `dgm::Animation::set/getSpeed`
+ * Moved `PreallocatedMemoryAmount` from `dgm::DynamicBuffer` template parameters to the constructor parameters
+    * Also made the whole thing explicit
 
 dgm-lib v2.x.x
  * `dgm::Animation::getSpeed` was marked as noexcept
